[package]
name = "avamain"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mibmo/avamain"
description = "Check domain availability based on generated character sequence"

[dependencies]
eyre = "0.6"
futures = "0.3"
seqset = "0.1.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "time"] }
tokio-stream = { version = "0.1.8", default-features = false, features = ["io-util"] }
whois-rust = { version = "1.4.0", features = ["tokio"] }
